Remove azure-sdk-docs-js-mockup-storage in .openpublishing.publish.config.json under live branch.

--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -1,28 +1,5 @@
 {
-  "docsets_to_publish": [
-    {
-      "docset_name": "azure-sdk-docs-js-mockup-storage",
-      "build_source_folder": "storage",
-      "build_output_subfolder": "azure-sdk-docs-js-mockup-storage",
-      "locale": "en-us",
-      "monikers": [],
-      "moniker_ranges": [],
-      "open_to_public_contributors": false,
-      "type_mapping": {
-        "Conceptual": "Content",
-        "RestApi": "Content",
-        "TSType": "Content",
-        "TSPackage": "Content",
-        "TSEnum": "Content",
-        "TSTypeAlias": "Content",
-        "ReferenceContainer": "Content"
-      },
-      "build_entry_point": "docs",
-      "template_folder": "_themes",
-      "base_path": "javascript",
-      "site_name": "Docs"
-    }
-  ],
+  "docsets_to_publish": [],
   "notification_subscribers": [],
   "sync_notification_subscribers": [],
   "branches_to_filter": [],
